--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
 		"psr-4":{
 			"Controllers\\":"Controllers/",
 			"Models\\":"Models/",
-			"Core\\":"Core/"
+			"Core\\":"Core/",
+			"Mail\\":"Mail/"
 		}
+	},
+	"require": {
+		"phpmailer/phpmailer": "^6.5"
 	}
 }
